--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,12 +44,12 @@ jobs:
         env:
           CI: true
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org'
+      #- uses: actions/setup-node@v4
+      #  with:
+      #    node-version: '20.x'
+      #    registry-url: 'https://registry.npmjs.org'
   
-      - name: Publish to Github Packages
+      - name: Publish to NPM
         run: |
           echo $NPM_TOKEN
           mkdir dist/tmp
@@ -57,4 +57,4 @@ jobs:
           7z x ../napi-canon-cameras.tgz
           npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
