--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -49,14 +49,13 @@ jobs:
       #    node-version: '20.x'
       #    registry-url: 'https://registry.npmjs.org'
   
-      #- name: Publish to NPM
-      #  run: |
-      #    echo $NPM_TOKEN
-      #    mkdir dist/tmp
-      #    cd dist/tmp
-      #    7z x ../napi-canon-cameras.tgz
+      - name: Publish to NPM
+        run: |
+          mkdir dist/tmp
+          cd dist/tmp
+          7z x ../napi-canon-cameras.tgz
 
       - uses: JS-DevTools/npm-publish@v3
         with:
-          package: dist/napi-canon-cameras.tgz
+          package: dist/tmp
           token: ${{ secrets.NPM_TOKEN }}
