--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 16
+          node-version: 20
 
       - name: Download EDSDK
         run: |
@@ -32,14 +32,16 @@ jobs:
           cd third_party/
           7z x edsdkw.zip
 
-      - name: Patch EDSDKTypes.h file
-        run: node helpers/patch-headers.js
+      - name: Patch EDSDKTypes.h and binding.gyp files
+        run: node helpers/patch-files.js
+        env:
+          EDSDK_VERSION: ${{ secrets.EDSDK_VERSION }}
 
       - name: Install dependencies
         run: |
           npm ci
 
-      - name: Package
+      - name: Package module
         run: npm run package
         env:
           CI: true
